Name:                csv
Version:             0.1.3
Category:            Text
Synopsis:            CSV/TSV loader and dumper
Description:         CSV/TSV loader and dumper
        .
        This library parses and dumps documents that are formatted 
        according to RFC 4180, \"The common Format and MIME Type for
        Comma-Separated Values (CSV) Files\" as well as tab seperated files that otherwise follow the same format. This format is used, among
        many other things, as a lingua franca for spreadsheets, and for
        certain web services.
Copyright:           Jaap Weel, 2007
License:             MIT
License-file:        COPYING
Author:              Jaap Weel <weel@ugcs.caltech.edu>
Maintainer:          Jaap Weel <weel@ugcs.caltech.edu>
Build-Depends:       base, parsec, filepath
Exposed-modules:     Text.CSV Text.TSV Text.CSV.Internal
